/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

import "google/protobuf/any.proto";

message Proto2Message {
  extensions 100 to max;
  required bool booleanField = 1;
  optional string stringField = 2 [default = "Missing field"];
  optional google.protobuf.Any anyField = 3;
}

message AnyValueMessage {
  optional string anyStringField1 = 1;
  optional string anyStringField2 = 2;
}

extend Proto2Message {
  optional int32 extensionField = 100;
}