/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

message RootMessage {
  repeated RepeatedMessage repeatedMessage = 1;
}

message RepeatedMessage {
  repeated bool booleanField = 1;
  repeated string stringField = 2;
  repeated int32 int32Field = 3;
  repeated uint32 uint32Field = 4;
  repeated sint32 sint32Field = 5;
  repeated fixed32 fixed32Field = 6;
  repeated sfixed32 sfixed32Field = 7;
  repeated double doubleField = 8;
  repeated float floatField = 9;
  repeated bytes bytesField = 10;
  repeated int64 int64Field = 11;
  repeated uint64 uint64Field = 12;
  repeated sint64 sint64Field = 13;
  repeated fixed64 fixed64Field = 14;
  repeated sfixed64 sfixed64Field = 15;
  repeated TestEnum testEnum = 16;
}

enum TestEnum {
  ENUM_VALUE_1 = 0;
  ENUM_VALUE_2 = 1;
  ENUM_VALUE_3 = 2;
}